--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> <!-- Podemos utilizar el componente <router-outlet></router-outlet> porque en el app.module.ts se ha importado el AppRoutingModule y el archivo app-routing.module.ts exporta el RouterModule -->
