load child routes and upload auth-routing, heroes-routing and app-routing

--- a/src/app/auth/pages/layaut-page/layaut-page.component.html
+++ b/src/app/auth/pages/layaut-page/layaut-page.component.html
@@ -1,1 +1,2 @@
 <p>layaut-page works!</p>
+<router-outlet></router-outlet>  <!-- Podemos utilizar el componente <router-outlet></router-outlet> porque en el auth.module.ts se ha importado el AuthRoutingModule y el archivo auth-routing.module.ts exporta el RouterModule -->
