--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -1,1 +1,3 @@
 <p>layout-page works!</p>
+<router-outlet></router-outlet>  <!-- Podemos utilizar el componente <router-outlet></router-outlet> porque en el heroes.module.ts se ha importado el HeroesRoutingModule y el archivo heroes-routing.module.ts exporta el RouterModule -->
+
