--- a/src/app/auth/pages/layaut-page/layaut-page.component.html
+++ b/src/app/auth/pages/layaut-page/layaut-page.component.html
@@ -1,2 +1,6 @@
-<p>layaut-page works!</p>
-<router-outlet></router-outlet>  <!-- Podemos utilizar el componente <router-outlet></router-outlet> porque en el auth.module.ts se ha importado el AuthRoutingModule y el archivo auth-routing.module.ts exporta el RouterModule -->
+
+<div class="grid p-3">
+  <div class="col-12 mt-5 md:col-6 md:col-offset-3 md:mt-8 ">
+    <router-outlet></router-outlet>  <!-- Podemos utilizar el componente <router-outlet></router-outlet> porque en el auth.module.ts se ha importado el AuthRoutingModule y el archivo auth-routing.module.ts exporta el RouterModule -->
+  </div>
+</div>
