create card component

--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -28,7 +28,7 @@
   </mat-toolbar>
 
 
-  <div class="container">
+  <div class="container p-2">
     <router-outlet></router-outlet>  <!-- Podemos utilizar el componente <router-outlet></router-outlet> porque en el heroes.module.ts se ha importado el HeroesRoutingModule y el archivo heroes-routing.module.ts exporta el RouterModule -->
   </div>
 
