upload hero page

--- a/src/app/heroes/components/card/card.component.html
+++ b/src/app/heroes/components/card/card.component.html
@@ -25,14 +25,14 @@
   <mat-divider></mat-divider>
 
   <mat-card-actions>
-    <button mat-button mat-raised color="primary" [routerLink]="['/heroes/edit', hero.id]"> <!-- [routerLink] es una directiva de Angular utilizada para vincular una ruta a un enlace como un botón. Este array define la ruta dinámica. La primera parte, '/heroes/edit', es una ruta fija. hero.id es una parte dinámica de la ruta permite que la URL incluya el ID del héroe específico. Este código genera un enlace que navega a una ruta como '/heroes/edit/1', donde 1 es el id del héroe actual. Si hero.id es 2, el enlace sería '/heroes/edit/2'.-->
+    <button mat-button mat-raised color="primary" [routerLink]="['/heroes/edit', hero.id]"> <!-- [routerLink] es una directiva de Angular utilizada para vincular una ruta a un enlace como un botón. Este array define la ruta dinámica. La primera parte, '/heroes/edit', es una ruta fija. hero.id es una parte dinámica de la ruta permite que la URL incluya el ID del héroe específico.Angular concatena ambos segmentos automáticamente con una barra (/) entre ellos. Este código genera un enlace que navega a una ruta como '/heroes/edit/1', donde 1 es el id del héroe actual. Si hero.id es 2, el enlace sería '/heroes/edit/2'. La ruta te lleva a NewPageComponent-->
       <mat-icon>edit</mat-icon>
       Editar
     </button>
 
     <span class="spacer"></span>
 
-    <button mat-button mat-raised  [routerLink]="['/heroes', hero.id]">
+    <button mat-button mat-raised  [routerLink]="['/heroes', hero.id]"> <!-- La ruta te lleva a HeroPageComponent -->
       <mat-icon>more_horiz</mat-icon>
     </button>
 
