upload search page

--- a/src/app/heroes/pages/search-page/search-page.component.html
+++ b/src/app/heroes/pages/search-page/search-page.component.html
@@ -1,1 +1,28 @@
-<p>search-page works!</p>
+
+<div class="flex flex-column p-2">
+  <h3>Buscador</h3>
+
+  <mat-form-field>
+    <mat-label>Buscador de héroes</mat-label>
+    <input
+      type="text"
+      matInput [formControl] ="searchInput"
+      (input) = 'searchHero()'
+      [matAutocomplete]="auto"
+      > <!--[formControl]="searchInput": vincula el FormControl denominado searchInput al elemento input. Los cambios en el input actualizarán el FormControl del .ts automáticamente.-->
+      <!--(input) = 'searchHero()':  el método searchHero() se debe llamar cada vez que el evento input se dispara. Es decir, cada vez que el usuario escribe o cambia el contenido del campo de entrada.  -->
+
+      <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" (optionSelected)="onSelectedOption($event)">
+          <mat-option *ngFor="let hero of heroes" [value]="hero"> <!-- Sin [value]="hero": No podriamos acceder fácilmente al objeto hero completo cuando una opción es seleccionada. Esto es especialmente importante si necesitamos manipular o mostrar más información del héroe seleccionado en otras partes del componente.  -->
+            {{hero.superhero}}
+          </mat-option>
+
+          <mat-option *ngIf="heroes.length === 0 && searchInput.value && searchInput.value.length > 0" value=""> <!-- Sin value="": La opción seguirá indicando que no se encontraron resultados, pero no tendrá un valor asociado explícito. -->
+            No se encontró nada con el término {{searchInput.value}}
+          </mat-option>
+      </mat-autocomplete>
+  </mat-form-field>
+
+
+  {{selectedHero | json}}
+</div>
