--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -5,15 +5,15 @@
 
   <mat-form-field>
     <mat-label>Usuario</mat-label>
-    <input type="text" matInput placeholder="Nombre de usuario">
+    <input type="text" matInput placeholder="Nombre de usuario: marta@gmail.com">
   </mat-form-field>
 
   <mat-form-field>
     <mat-label>Contraseña</mat-label>
-    <input type="password" matInput placeholder="Contraseña">
+    <input type="password" matInput placeholder="Contraseña: 0000">
   </mat-form-field>
 
-  <button mat-button mat-flat-button color="primary">
+  <button mat-button mat-flat-button color="primary" (click)="onLogin()">
     <mat-icon>save</mat-icon>
     Ingresar
   </button>
